[maven] IDEA-197658 .mvn/maven.config is ignored
fix after code review

GitOrigin-RevId: 6ca92a1640715b7ec8e9ef46265dceb057332b35